# GP2040-CE

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.yml  .mega-linter.yml  .yamllint.yml  404.html  CLAUDE.md  CMakeLists-1.txt  CMakeLists.txt  GP2040-CE.code-workspace  LICENSE  README.md  TODO.md  build-web.ps1  build-web.py  compile_proto.cmake  docker-compose.yml  dockerfile  index.html  layout-fix-lift6.patch  patch_board_config.cmake  pico_sdk_import.cmake  platformio.ini  replace_includes.js  scroll-fixed-and-macro15.patch  scrolling-statusbar.patch  search-index.json  sitemap.xml
.github/: FUNDING.yml  copilot-instructions.md  (+1 more)
lib/: CMakeLists.txt  mbedtls-config-changes.h
lib/ADS1115/: ADS1115.cpp  ADS1115.h  CMakeLists.txt  README.md
lib/ADS1219/: ADS1219.cpp  ADS1219.h  CMakeLists.txt  CmakeLists.txt
lib/ADS1256/: ADS1256.cpp  ADS1256.h  CMakeLists.txt  LICENSE  README.md
lib/AnimationStation/: .editorconfig  CMakeLists.txt
lib/AnimationStation/src/: Animation.cpp  Animation.hpp  AnimationStation.cpp  AnimationStation.hpp  AnimationStorage.hpp  Pixel.hpp  SpecialMoveSystem.cpp  SpecialMoveSystem.hpp
lib/AnimationStation/src/Effects/: BurstColor.cpp  BurstColor.hpp  Chase.cpp  Chase.hpp  CustomTheme.cpp  CustomTheme.hpp  CustomThemePressed.cpp  CustomThemePressed.hpp  JiggleStaticColor.cpp  JiggleStaticColor.hpp  JiggleTwoStaticColor.cpp  JiggleTwoStaticColor.hpp  Rain.cpp  Rain.hpp  Rainbow.cpp  Rainbow.hpp  RandomColor.cpp  RandomColor.hpp  SMCircleColour.cpp  SMCircleColour.hpp  SMKnightRider.cpp  SMKnightRider.hpp  SMPulseColour.cpp  SMPulseColour.hpp  SMWave.cpp  SMWave.hpp  StaticColor.cpp  StaticColor.hpp  StaticTheme.cpp  StaticTheme.hpp
lib/BTAdapter/: BTAdapter.cpp  BTAdapter.gatt  BTAdapter.h  BTHelper.h  BTInterface.cpp  BTInterface.h  CMakeLists.txt  GATT.h  btstack_config.h  descriptor.h  gamepad.hid  notes.txt  readme.md
lib/BTAdapter/analysis/: pico_dumped_lmp_features.txt  pico_dumped_sdp_attr.txt  xbone_dumped_hid_desc.txt  xbone_dumped_lmp_features.txt  xbone_dumped_sdp_attr.txt  xbone_found_hid_desc.txt
lib/BitBang_I2C/: BitBang_I2C.c  BitBang_I2C.h  CMakeLists.txt  README.md
lib/CRC32/: CMakeLists.txt
lib/CRC32/src/: CRC32.cpp  CRC32.h
lib/DS4Crypto/: CMakeLists.txt
lib/DS4Crypto/include/: ds4crypto.h
lib/DS4Crypto/src/: ds4crypto.cpp
lib/FlashPROM/: CMakeLists.txt  library.json
lib/FlashPROM/include/: FlashPROM.h
lib/FlashPROM/src/: FlashPROM.cpp  FlashPROM.h
lib/GPDaughter/: CMakeLists.txt  GPDaughter.cpp  GPDaughter.h
lib/Gamepad/: library.json
lib/Gamepad/include/: Gamepad.h  GamepadDebouncer.h  GamepadState.h
lib/Gamepad/src/: Gamepad.cpp  GamepadDebouncer.cpp
lib/Helpers/: library.json
lib/Helpers/src/: Helpers.cpp  Helpers.hpp
lib/I2CIF/: CMakeLists.txt  I2CIF.h  I2CIF.hpp
lib/I2CInputExpansion/: CMakeLists.txt  I2CInputExpansion.cpp  I2CInputExpansion.h
lib/MPG/: library.json
lib/MPG/include/: Gamepad.h  GamepadConfig.h  GamepadDebouncer.h  GamepadDescriptors.h  GamepadEnums.h  GamepadState.h  GamepadStorage.h  HIDDescriptors.h  SwitchDescriptors.h  XInputDescriptors.h
lib/MPG/src/: Gamepad.cpp
lib/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  Vector3f.cpp  Vector3f.h
lib/NeoPico/: CMakeLists.txt  library..json
lib/NeoPico/src/: NeoPico.cpp  NeoPico.h  NeoPico.hpp  ws2812.pio
lib/OneBitDisplay/: CMakeLists.txt  OneBitDisplay.cpp  OneBitDisplay.h  README.md  fonts.h  obd.inl
lib/OneBitDisplay/fonts/: FreeSerif12pt7b.h
lib/PicoPeripherals/: CMakeLists.txt  README.md  interval_override.cpp  interval_override.h  peripheral_i2c.cpp  peripheral_i2c.h  peripheral_spi.cpp  peripheral_spi.h  peripheral_usb.cpp  peripheral_usb.h
lib/PlayerLEDs/: CMakeLists.txt
lib/PlayerLEDs/include/: PlayerLEDs.h
lib/PlayerLEDs/src/: PlayerLEDs.cpp
lib/QMI8658/: CMakeLists.txt  QMI8658.c  QMI8658.h  README.md
lib/SNESpad/: CMakeLists.txt  README.md  SNESpad.cpp  SNESpad.h
lib/TinyUSB_Gamepad/: CMakeLists.txt  library.json
lib/TinyUSB_Gamepad/include/: hid_driver.h  hid_interface.h  net_driver.h  ps3_device.h  switch_interface.h  usb_driver.h  webserver_descriptors.h  xinput_device.h  xinput_driver.h  xinput_interface.h
lib/TinyUSB_Gamepad/src/: hid_driver.c  hid_driver.cpp  hid_driver.h  net_driver.cpp  net_driver.h  ps4_driver.cpp  ps4_driver.h  tusb_driver.c  tusb_driver.cpp  usb_descriptors.c  usb_descriptors.cpp  usb_driver.h  xbone_driver.cpp  xbone_driver.h  xgip_protocol.cpp  xgip_protocol.h  xinput_driver.c  xinput_driver.cpp  xinput_driver.h  xinput_host.cpp  xinput_host.h
lib/TinyUSB_Gamepad/src/xid_driver/: LICENSE  xid_driver.c  xid_driver.h  xid_gamepad.c  xid_remote.c  xid_remote.h  xid_steelbattalion.c
lib/WiiExtension/: CMakeLists.txt  README.md  WiiExtension.cpp  WiiExtension.h
lib/WiiExtension/extensions/: ClassicExtension.cpp  ClassicExtension.h  DrumExtension.cpp  DrumExtension.h  ExtensionBase.cpp  ExtensionBase.h  Extensions.h  GuitarExtension.cpp  GuitarExtension.h  MotionPlusExtension.cpp  MotionPlusExtension.h  NunchuckExtension.cpp  NunchuckExtension.h  TaikoExtension.cpp  TaikoExtension.h  TrainExtension.cpp  TrainExtension.h  TurntableExtension.cpp  TurntableExtension.h  UDrawExtension.cpp  UDrawExtension.h
lib/httpd/: CMakeLists.txt  fs.c  fsdata.c  httpd.c  httpd.h  httpd_structs.h
lib/joybus-pio/: CMakeLists.txt
lib/joybus-pio/include/: gamecube.h
lib/joybus-pio/src/: gamecube.pio
lib/lwip-port/: CMakeLists.txt  lwipopts.h
lib/mbedtls/: CMakeLists.txt
lib/mcp23017/: CMakeLists.txt  mcp23017.cpp  mcp23017.h
lib/nanopb/: CMakeLists.txt  pb.h  requirements.txt
lib/nanopb/extra/: requirements.txt
lib/nanopb/generator/: nanopb_generator.py
lib/nanopb/generator/proto/: nanopb.proto
lib/pico_pio_uart_tx_stdio/: CMakeLists.txt  pio_uart_tx_stdio.c  pio_uart_tx_stdio.h
lib/pico_pio_usb/: .gitignore  CMakeLists.txt  README.md  library.properties
lib/pico_pio_usb/src/: pio_usb.c  pio_usb_configuration.h  pio_usb_host.c  pio_usb_ll.h  usb_definitions.h
lib/rndis/: CMakeLists.txt  rndis.c  rndis.h  rndis_reports.c
(+2182 files in other folders)
