add_subdirectory(ADS1219)
add_subdirectory(AnimationStation)
add_subdirectory(BitBang_I2C)
add_subdirectory(CRC32)
add_subdirectory(FlashPROM)
add_subdirectory(httpd)
add_subdirectory(lwip-port)
add_subdirectory(nanopb)
add_subdirectory(NeoPico)
add_subdirectory(OneBitDisplay)
add_subdirectory(PlayerLEDs)
add_subdirectory(rndis)
add_subdirectory(TinyUSB_Gamepad)
add_subdirectory(WiiExtension)
add_subdirectory(SNESpad)
