include(../../compile_proto.cmake)
compile_proto()

add_library(TinyUSB_Gamepad
src/hid_driver.cpp
src/net_driver.cpp
src/tusb_driver.cpp
src/usb_descriptors.cpp
src/xinput_driver.cpp
src/ps4_driver.cpp
src/xid_driver/xid_driver.c
src/xid_driver/xid.c
src/xid_driver/xid_gamepad.c
src/xid_driver/xid_remote.c
src/xid_driver/xid_steelbattalion.c
src/xgip_protocol.cpp
src/xinput_host.cpp
src/xbone_driver.cpp
${PROTO_OUTPUT_DIR}/enums.pb.h
)
target_include_directories(TinyUSB_Gamepad PUBLIC
${CMAKE_CURRENT_SOURCE_DIR}/src
${CMAKE_CURRENT_SOURCE_DIR}/src/xid_driver
${CMAKE_SOURCE_DIR}/headers
${CMAKE_SOURCE_DIR}/lib/CRC32/src
${CMAKE_SOURCE_DIR}/lib/mbedtls/include
${CMAKE_SOURCE_DIR}/lib/nanopb
${PROTO_OUTPUT_DIR}
)
target_link_libraries(TinyUSB_Gamepad 
pico_stdlib
pico_mbedtls
tinyusb_device
rndis
)
